--- a/pr.html
+++ b/pr.html
@@ -43,6 +43,6 @@
     </form>
     </center>
     <hr><center>
-    <a href="hi.html">Go to home page</a>
+    <a href="index.html">Go to home page</a>
     </center>
 </body>
